--- a/doc/dissertation/resources/glossary.tex
+++ b/doc/dissertation/resources/glossary.tex
@@ -84,3 +84,14 @@
         A metalanguage is a language that is, itself, used to describe aspects of another language \citep{jakobson1980metalanguage}. 
     }
 }
+
+\newacronym{vcs}{VCS}{Version Control System}
+
+\newglossaryentry{defblock}{
+    name=Defblock,
+    description={
+        A defblock is a top-level definition block in \gls{metaspec}. 
+    }
+}
+
+\newacronym{ssr}{SSR}{Special-Syntax Rule}
