--- a/doc/dissertation/resources/implementation.tex
+++ b/doc/dissertation/resources/implementation.tex
@@ -1,6 +1,7 @@
 % Present an overview of the software system, and a high-level discussion of the implementation proces.
-% Reflection on the choice of languages, tooling and techniques. 
-% Make sure to focus on the MAIN usses with implementation.
+% Reflection on the choice of languages, tooling and techniques (project management).
+% Make sure to focus on the MAIN issues with implementation.
+% Follow the same architectural ordering as the design section.
 
 \chapter{Implementation} % (fold)
 \label{cha:implementation}
