--- a/doc/dissertation/resources/evaluation.tex
+++ b/doc/dissertation/resources/evaluation.tex
@@ -12,6 +12,8 @@ This section will include:
 %   - Fairly awkward use of the environment (no ability to delete properties, for example). 
 %   - Grammar admits some nonsensical terms such as alternations with semantics not at the top-level. These are ignored by the metacompiler, but are inelegant. Ideally this would not be allowed by the grammar at all.
 
+% Could have used a FAR more rigorous design process and treated it more like a traditional software project.
+
 % Contributions
 % Failures
 % Future Work
